--- a/asst5.vcxproj
+++ b/asst5.vcxproj
@@ -10,9 +10,41 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="arcball.h" />
+    <ClInclude Include="cvec.h" />
+    <ClInclude Include="geometrymaker.h" />
+    <ClInclude Include="glsupport.h" />
+    <ClInclude Include="material.h" />
+    <ClInclude Include="matrix4.h" />
+    <ClInclude Include="ppm.h" />
+    <ClInclude Include="quat.h" />
+    <ClInclude Include="rigtform.h" />
+    <ClInclude Include="scenegraph.h" />
+    <ClInclude Include="picker.h" />
+    <ClInclude Include="asstcommon.h" />
+    <ClInclude Include="drawer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="asst4.cpp" />
+    <ClCompile Include="glsupport.cpp" />
+    <ClCompile Include="picker.cpp" />
+    <ClCompile Include="ppm.cpp" />
+    <ClCompile Include="scenegraph.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\basic-gl2.vshader" />
+    <None Include="shaders\basic-gl3.vshader" />
+    <None Include="shaders\diffuse-gl2.fshader" />
+    <None Include="shaders\diffuse-gl3.fshader" />
+    <None Include="shaders\pick-gl2.fshader" />
+    <None Include="shaders\pick-gl3.fshader" />
+    <None Include="shaders\solid-gl2.fshader" />
+    <None Include="shaders\solid-gl3.fshader" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F83AB71F-D4B0-4B9E-86F5-DC77C0D89D8D}</ProjectGuid>
-    <RootNamespace>asst3</RootNamespace>
+    <RootNamespace>asst4</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -91,29 +123,6 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <None Include="shaders\basic-gl2.vshader" />
-    <None Include="shaders\basic-gl3.vshader" />
-    <None Include="shaders\diffuse-gl2.fshader" />
-    <None Include="shaders\diffuse-gl3.fshader" />
-    <None Include="shaders\solid-gl2.fshader" />
-    <None Include="shaders\solid-gl3.fshader" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="arcball.h" />
-    <ClInclude Include="cvec.h" />
-    <ClInclude Include="geometrymaker.h" />
-    <ClInclude Include="glsupport.h" />
-    <ClInclude Include="matrix4.h" />
-    <ClInclude Include="ppm.h" />
-    <ClInclude Include="quat.h" />
-    <ClInclude Include="rigtform.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="asst3.cpp" />
-    <ClCompile Include="glsupport.cpp" />
-    <ClCompile Include="ppm.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
